pa3grammar.txt
Program -> Declaration-list $
Declaration-list -> Declaration Declaration-list
Declaration-list -> ε 
Declaration -> Declaration-initial Declaration-prime
Declaration-initial ->  Type-specifier #pid ID
Declaration-prime -> Fun-declaration-prime
Declaration-prime -> Var-declaration-prime
Var-declaration-prime -> ; #pop
Var-declaration-prime -> [ #pnum NUM ] #declare_array ; 
Fun-declaration-prime ->  ( Params ) Compound-stmt
Type-specifier -> int
Type-specifier -> void
Params -> int #pid ID Param-prime Param-list
Params -> void Param-list-void-abtar
Param-list-void-abtar -> #pid ID Param-prime Param-list
Param-list-void-abtar -> ε
Param-list -> , Param Param-list
Param-list -> ε
Param -> Declaration-initial Param-prime
Param-prime -> [  ]
Param-prime -> ε
Compound-stmt -> { Declaration-list Statement-list }
Statement-list -> Statement Statement-list
Statement-list -> ε
Statement -> Expression-stmt
Statement -> Compound-stmt
Statement -> Selection-stmt
Statement -> Iteration-stmt
Statement -> Return-stmt
Statement -> For-stmt
Expression-stmt -> Expression ; #pop
Expression-stmt -> break ;
Expression-stmt -> ;
Selection-stmt -> if ( Expression ) #save Statement else #jpf Statement #jp
Iteration-stmt -> while ( #label Expression ) #save Statement #while
Return-stmt -> return Return-stmt-prime
Return-stmt-prime -> ;
Return-stmt-prime -> Expression ;
For-stmt -> for ID = Vars Statement
Vars -> Var Var-zegond
Var-zegond -> , Var Var-zegond
Var-zegond -> ε
Var -> #pid ID Var-prime
Expression -> Simple-expression-zegond
Expression -> #pid ID B
B -> = Expression #assign
B -> [ Expression ] #array_address H
B -> Simple-expression-prime
H -> = Expression #assign
H -> G D C
Simple-expression-zegond -> Additive-expression-zegond C
Simple-expression-prime -> Additive-expression-prime C
C -> Relop Additive-expression #relop
C -> ε
Relop -> #symbol <
Relop -> #symbol ==
Additive-expression -> Term D
Additive-expression-prime -> Term-prime D
Additive-expression-zegond -> Term-zegond D
D -> Addop Term #addop D
D -> ε
Addop -> #symbol +
Addop -> #symbol -
Term -> Signed-factor G
Term-prime -> Signed-factor-prime G
Term-zegond -> Signed-factor-zegond G
G -> * Signed-factor #mult G
G -> ε
Signed-factor -> #symbol + Factor #signed_factor
Signed-factor -> #symbol - Factor #signed_factor
Signed-factor -> Factor
Signed-factor-prime -> Factor-prime
Signed-factor-zegond -> #symbol + Factor #signed_factor
Signed-factor-zegond -> #symbol - Factor #signed_factor
Signed-factor-zegond -> Factor-zegond
Factor -> ( Expression )
Factor -> #pid ID Var-call-prime
Factor -> #pnum NUM
Var-call-prime -> ( Args )
Var-call-prime -> Var-prime
Var-prime -> [ Expression ] #array_address
Var-prime -> ε
Factor-prime -> ( Args ) #output
Factor-prime -> ε
Factor-zegond -> ( Expression )
Factor-zegond -> #pnum NUM
Args -> Arg-list
Args -> ε
Arg-list -> Expression Arg-list-prime
Arg-list-prime -> , Expression Arg-list-prime
Arg-list-prime -> ε
